--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,4 +1,4 @@
-<ion-header >
+<ion-header>
   <ion-toolbar>
     <ion-title>
       Desenhos
@@ -6,25 +6,26 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content >
+<ion-content>
   <ion-list>
 
     <ion-item lines="full">
       <ion-thumbnail slot="start">
-        <img src="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q80/wp-content/uploads/2020/03/legiao_Xj4yoA_U1VrHKFsZJquWhRC73GeiQwxETdIpgYtm98.jpg.jpeg">
-</ion-thumbnail>
-  <ion-label>
-    Liga da Justiça Sombria: Guerra de Apokolips
-  </ion-label>
+        <img
+          src="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q80/wp-content/uploads/2020/03/legiao_Xj4yoA_U1VrHKFsZJquWhRC73GeiQwxETdIpgYtm98.jpg.jpeg">
+      </ion-thumbnail>
+      <ion-label>
+        Liga da Justiça Sombria: Guerra de Apokolips
+      </ion-label>
 
-  <div slot="end" class="c100 p85 small green">
-    <span>85%</span>
-    <div class="slice">
-      <div class="bar"></div>
-      <div class="fill"></div>
-    </div>
-  </div>
-</ion-item>
+      <div slot="end" class="c100 p85 small green">
+        <span>85%</span>
+        <div class="slice">
+          <div class="bar"></div>
+          <div class="fill"></div>
+        </div>
+      </div>
+    </ion-item>
 
   </ion-list>
 </ion-content>
