--- a/src/app/series/stargirl/stargirl.page.html
+++ b/src/app/series/stargirl/stargirl.page.html
@@ -1,19 +1,19 @@
 <ion-header>
 
-  <ion-toolbar color="azulc">
+  <ion-toolbar color="amarelo">
     <ion-title>Stargirl</ion-title>
   </ion-toolbar>
 
 </ion-header>
 
-<ion-content color="https://s1.1zoom.me/big0/55/Stars_Sky_454921.jpg">
+<ion-content color="dourado">
 <div class="banner">
   <img src="https://cosmicbook.news/sites/default/files/stargirl-characters-poster.jpg">
 </div>
 
-<ion-card color="azulc">
+<ion-card color="amarelo">
   <ion-card-header>
-    <ion-item color="azulc">
+    <ion-item color="amarelo">
       <ion-icon name="people-circle-outline"></ion-icon>
       <ion-label>
         Avaliação dos Usuários
@@ -29,7 +29,7 @@
     </ion-item>
   </ion-card-header>
 
-  <ion-item class="info" color="azule">
+  <ion-item class="info" color="dourado">
       <div class="info ion-text-center">
         <span class="duracao">43m</span>
         <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime</p>
